derive/tests/ui/no_usize_arith_enum.stderr
error[E0308]: mismatched types
  --> tests/ui/no_usize_arith_enum.rs:14:12
   |
14 |     idx += 1 as usize;
   |            ^^^^^^^^^^ expected `Foo`, found `usize`
   |
help: call `Into::into` on this expression to convert `usize` into `Foo`
   |
14 |     idx += (1 as usize).into();
   |            +          ++++++++
